// file: pkg/notification/proto/requests/send_notification_request.proto
// version: 1.0.0
// guid: 42b9620e-9388-4ee6-be25-e4a3a0928211

edition = "2023";

package gcommon.v1.notification;

import "pkg/common/proto/request_metadata.proto";
import "pkg/notification/proto/notification_message.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/notification/proto";

message SendNotificationRequest {
  // Standard request metadata for tracing and auth.
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Notification to be delivered.
  NotificationMessage notification = 2;
}
